# formspec

./: .firebaserc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  COMPAT.md  COMPLETED.md  Cargo.toml  FIELD_SPACING_PARITY.md  FORMSPEC-LLM-MAP.md  LICENSE  LICENSE-BSL  LICENSING.md  Makefile  PLANNING.md  README.md  STACK.md  STUDIO-REVIEW-TODO.md  THEME-IMPLEMENTATION-PLAN.md  TODO-STACK.md  TODO.md  VISION.md  changelog-spec.md  component.schema.json  context.md  definition.schema.json  deny.toml  e2e-coverage-matrix.md  e2e-test-strategy.md  e2e-testing-plan.md  fel-grammar.md  filemap.json  firebase.json  grant-application-e2e-proposals.md  implementation-vs-e2e-gaps.md  index.html  mapping-spec.md  package-lock.json  package.json  playwright.config.ts  (+20 more)
.cargo/: config.toml
.changeset/: README.md  RELEASE-TRAINS.md  config.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.storybook/: main.ts  preview.tsx  story-screenshot-id.ts  vitest.setup.ts
adapters/: __init__.py  base.py  csv_adapter.py  json_adapter.py  xml_adapter.py
agents/: formspec-pm.md
benchmarks/: run_mcp_loop.py  test_run_mcp_loop.py
crates/formspec-changeset/: Cargo.toml
crates/formspec-changeset/src/: extract.rs  graph.rs  lib.rs
crates/formspec-core/: Cargo.toml  README.md
crates/formspec-core/docs/rustdoc-md/: API.md
crates/formspec-core/src/: assembler.rs  assembly_fel_rewrite.rs  changelog.rs  component_tree.rs  definition_items.rs  extension_analysis.rs  fel_analysis.rs  fel_condition_group_lift.rs  fel_rewrite_exact.rs  json_artifacts.rs  lib.rs  option_sets.rs  path_utils.rs  registry_client.rs  response_migration.rs  runtime_mapping.rs  schema_validator.rs  value_coerce.rs  wire_keys.rs
crates/formspec-core/src/registry_client/: mod.rs  name.rs  parse.rs  registry.rs  tests.rs  types.rs  version.rs  wire_json.rs
crates/formspec-core/src/runtime_mapping/: document.rs  engine.rs  env.rs  mod.rs  parse.rs  path.rs  tests.rs  transforms.rs  types.rs  wire_json.rs
crates/formspec-core/tests/: changelog_test.rs
crates/formspec-eval/: Cargo.toml  README.md
crates/formspec-eval/docs/rustdoc-md/: API.md
crates/formspec-eval/src/: convert.rs  eval_json.rs  fel_json.rs  lib.rs  nrb.rs  pipeline.rs  rebuild.rs  recalculate.rs  revalidate.rs  runtime_seed.rs  screener.rs  types.rs  value_predicate.rs
crates/formspec-eval/src/rebuild/: item_tree.rs  repeat_data.rs  repeat_expand.rs  tests.rs  wildcard.rs
crates/formspec-eval/src/recalculate/: bind_pass.rs  json_fel.rs  mod.rs  variables.rs
crates/formspec-eval/src/revalidate/: env.rs  expr.rs  items.rs  mod.rs  shapes.rs
crates/formspec-eval/src/types/: definition.rs  evaluation.rs  mod.rs  modes.rs  paths.rs
crates/formspec-eval/tests/integration/: evaluate_pipeline.rs
crates/formspec-lint/: Cargo.toml  README.md
crates/formspec-lint/schemas/: component.schema.json  definition.schema.json
crates/formspec-lint/src/: component_matrix.rs  dependencies.rs  expressions.rs  extensions.rs  lib.rs  lint_json.rs  metadata.rs  pass_component.rs  pass_theme.rs  passes.rs  references.rs  schema_validation.rs  tree.rs  types.rs
crates/formspec-pdf/: Cargo.toml
crates/formspec-pdf/src/: acroform.rs  appearance.rs  compress.rs  fonts.rs  layout.rs  lib.rs  measure.rs  options.rs  paginate.rs  render.rs  tagged.rs  tests.rs  xfdf.rs
crates/formspec-plan/: Cargo.toml
crates/formspec-plan/src/: defaults.rs  eval_merge.rs  lib.rs  params.rs  planner.rs  responsive.rs  tests.rs  types.rs
crates/formspec-py/: Cargo.toml  README.md  pyproject.toml
crates/formspec-py/src/: changelog.rs  convert.rs  document.rs  fel.rs  lib.rs  mapping.rs  native_tests.rs  pdf.rs  plan.rs  registry.rs  theme.rs
crates/formspec-wasm/: Cargo.toml  README.md
crates/formspec-wasm/src/: changelog.rs  changeset.rs  convert.rs  definition.rs  document.rs  evaluate.rs  fel.rs  json_host.rs  lib.rs  mapping.rs  pdf.rs  plan.rs  registry.rs  split_abi.rs  theme.rs  value_coerce.rs  wasm_tests.rs
docs/: changelog.html  component-spec.html  extension-registry.html  fel-grammar.html  grant-application-guide.md  grant-application.html  index.html  locale-spec.html  mapping.html  ontology-spec.html  presentation-layer-approach-c.md  references-spec.html  spec.html  theme-spec.html
emails/: .gitignore  blog-post-newsletter.tsx  package.json  send-draft.mts
examples/: README.md
fel/: __init__.py  dependencies.py  environment.py  evaluator.py  extensions.py  functions.py  types.py
form-builder/: package.json  styles.css  test_fel.js  tsconfig.json  vite.config.ts  vitest.config.ts
form-builder-v2/: index.html  package.json  styles.css  tsconfig.json  vite.config.ts
functions/: index.js  package-lock.json
plans/: approach-a-presentation-hints.md  tier1-revised.md  tier3-component-plan.md  tier3-revised.md
playground/: index.html  main.ts  styles.css
portal-demo/: formspec-engine.js  index.html
proposals/: presentation-layer-approach-b.md
registries/: formspec-common.registry.json
schemas/: component.schema.json  core-commands.schema.json  definition.schema.json  locale.schema.json  mapping.schema.json  references.schema.json  registry.schema.json  respondent-ledger-event.schema.json  respondent-ledger.schema.json  studio-commands.schema.json  theme.schema.json
scripts/: build-hosting.sh  bundle-rustdoc-md.mjs  changeset-tier-filter.mjs  changeset-tiers.mjs  check-changeset-tier-placement.mjs  check-dep-fences.mjs  check-html-docs.sh  check-studio-source-sizes.mjs  copy-layout-css-assets.sh  find-large-code-files.sh  generate-filemap.mjs  generate-llm-specs.mjs  generate-spec-artifacts.mjs  generate-theme-from-registry.mjs  generate-ts-api-markdown.mjs  generate-wos-core-references.py  rehydration-diff.ts  spec-artifacts.config.json  twiggy-wasm.sh
site/: astro.config.mjs  index.html  package-lock.json  package.json
specs/: lint-codes.json
tests/: README.md  __init__.py  conftest.py  fixture-clinical-adverse-event.json  fixture-household-benefits-renewal.json  helpers.py  test_adapters.py  (+22 more)
(+1360 files in other folders)
