[workspace]
members = [
    "crates/fel-core",
    "crates/formspec-changeset",
    "crates/formspec-core",
    "crates/formspec-eval",
    "crates/formspec-lint",
    "crates/formspec-py",
    "crates/formspec-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
