[project]
name = "formspec"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "jsonschema[format]>=4.20",
    "pytest>=9.0",
    "hypothesis>=6.0",
    "msgspec>=0.18",
    "referencing>=0.30",
]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "schema: JSON schema and schema/spec contract tests",
    "schema_contract: cross-schema and prose-contract schema tests",
    "runtime: runtime package behavior tests",
    "fel: formspec.fel runtime tests",
    "validator: formspec.validator runtime tests",
    "mapping: mapping runtime tests",
    "adapters: adapter runtime tests",
]
