[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formspec-py"
version = "0.1.0"
requires-python = ">=3.12"
description = "Formspec Python package — server-side FEL evaluation, validation, linting, and mapping"
license = "AGPL-3.0-only"
readme = "src/formspec/README.md"
authors = [{ name = "Michael Deeb" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://formspec.org"
Repository = "https://github.com/Formspec-org/formspec"

[project.optional-dependencies]
test = [
    "jsonschema[format]>=4.20",
    "pytest>=9.0",
    "hypothesis>=6.0",
    "msgspec>=0.18",
    "referencing>=0.30",
]
rust = ["formspec-rust>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/formspec"]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "schema: JSON schema and schema/spec contract tests",
    "schema_contract: cross-schema and prose-contract schema tests",
    "runtime: runtime package behavior tests",
    "fel: formspec.fel runtime tests",
    "validator: formspec.validator runtime tests",
    "mapping: mapping runtime tests",
    "adapters: adapter runtime tests",
]
