[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "formspec-py"
version = "0.1.0"
requires-python = ">=3.12"
description = "Formspec Python package — server-side FEL evaluation, validation, linting, and mapping"
license = "Apache-2.0"
readme = "src/formspec/README.md"
authors = [{ name = "Michael Deeb" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "msgspec>=0.18",
]

[project.urls]
Homepage = "https://formspec.org"
Repository = "https://github.com/Formspec-org/formspec"

[project.optional-dependencies]
test = [
    "jsonschema[format]>=4.20",
    "pytest>=9.0",
    "hypothesis>=6.0",
    "referencing>=0.30",
]
docs = [
    "pdoc>=15.0",
]

[tool.maturin]
manifest-path = "crates/formspec-py/Cargo.toml"
python-source = "src"
features = ["extension-module"]
module-name = "formspec._native"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "schema: JSON schema and schema/spec contract tests",
    "schema_contract: cross-schema and prose-contract schema tests",
    "runtime: runtime package behavior tests",
    "fel: formspec.fel runtime tests",
    "validator: formspec.validator runtime tests",
    "mapping: mapping runtime tests",
    "adapters: adapter runtime tests",
]
