[package]
name = "formspec-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec Definition Evaluator — 4-phase batch processor (rebuild, recalculate, revalidate, notify)"

[dependencies]
fel-core = { path = "../fel-core" }
rust_decimal = "1"
serde_json = "1"

[dev-dependencies]
# None
