[package]
name = "formspec-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec Linter — 8-pass static analysis pipeline"

[dependencies]
fel-core = { path = "../fel-core" }
formspec-core = { path = "../formspec-core" }
jsonschema = { version = "0.45", default-features = false }
rust_decimal = "1"
serde_json = "1"

[dev-dependencies]
# None
