[package]
name = "formspec-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec PDF renderer: AcroForm + tagged PDF/UA generation from LayoutNode trees"

[dependencies]
formspec-plan = { path = "../formspec-plan", features = ["eval-merge"] }
formspec-theme = { path = "../formspec-theme" }
formspec-eval = { path = "../formspec-eval" }
pdf-writer = "0.14"
subsetter = "0.2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# For PDF structure validation in tests
