[package]
name = "formspec-plan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec layout planner: LayoutNode tree generation from definitions, themes, and component documents"

[features]
eval-merge = ["formspec-eval"]

[dependencies]
formspec-theme = { path = "../formspec-theme" }
formspec-core = { path = "../formspec-core" }
formspec-eval = { path = "../formspec-eval", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
