[package]
name = "formspec-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for Formspec — exposes all Rust crates to Python"
repository = "https://github.com/Formspec-org/formspec"
publish = false
readme = "README.md"

[lib]
name = "formspec_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
fel-core = { path = "../fel-core" }
formspec-core = { path = "../formspec-core" }
formspec-eval = { path = "../formspec-eval" }
formspec-lint = { path = "../formspec-lint" }
pyo3 = { version = "0.28" }
pythonize = "0.28"
rust_decimal = "1"
serde = "1"
serde_json = "1"

[features]
# Empty default so `cargo nextest run --workspace` links libpython. Maturin enables
# `extension-module` via pyproject.toml (extension wheels must not link libpython).
default = []
extension-module = ["pyo3/extension-module"]
