[package]
name = "formspec-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Formspec — exposes fel-core and formspec-core to TypeScript"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# Native executables for `cargo bloat` only — the tool parses Mach-O/ELF/PE, not WebAssembly.
[[bin]]
name = "formspec-wasm-bloat-runtime"
path = "src/bin/bloat_runtime.rs"
test = false

[[bin]]
name = "formspec-wasm-bloat-tools"
path = "src/bin/bloat_tools.rs"
required-features = ["full-wasm"]
test = false

[features]
# Meta: everything the **tools** `.wasm` artifact needs (lazy-loaded in TS). `npm run build:wasm:tools` uses defaults.
full-wasm = [
    "lint",
    "document-api",
    "definition-assembly",
    "mapping-api",
    "registry-api",
    "changelog-api",
    "fel-authoring",
    "theme-api",
    "plan-api",
    "pdf-api",
]
default = ["full-wasm"]
# Lint pulls `formspec-lint` + schema/jsonschema stack — omit from the **runtime** WASM artifact (ADR 0050).
lint = ["dep:formspec-lint", "document-api"]
# Document type detection, JSON Pointer→Path, schema validation planning, and (with `lint`) lintDocument*.
document-api = []
# `$ref` / fragment assembly (`assembleDefinition`).
definition-assembly = []
# Mapping rule + document execution (`executeMapping`, `executeMappingDoc`).
mapping-api = []
# Registry parse/lookup/lifecycle/extension usage validation.
registry-api = []
# Definition diff changelog (`generateChangelog`).
changelog-api = []
# FEL parse/tokenize/print, full deps extract, rewrites, assembly rewrite, builtin catalog.
fel-authoring = []
# Theme cascade resolution (resolvePresentation, resolveToken).
theme-api = ["dep:formspec-theme"]
# Layout planning (planComponentTree, planDefinitionFallback). Depends on theme.
plan-api = ["theme-api", "dep:formspec-plan"]
# PDF rendering (renderPDF, generateXFDF, parseXFDF). Depends on plan.
pdf-api = ["plan-api", "dep:formspec-pdf"]

[dependencies]
fel-core = { path = "../fel-core" }
formspec-core = { path = "../formspec-core" }
formspec-eval = { path = "../formspec-eval" }
formspec-lint = { path = "../formspec-lint", optional = true }
formspec-theme = { path = "../formspec-theme", optional = true }
formspec-plan = { path = "../formspec-plan", features = ["eval-merge"], optional = true }
formspec-pdf = { path = "../formspec-pdf", optional = true }
rust_decimal = "1"
serde = "1"
serde_json = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
